# ocaml-cdds

./: .gitignore  Makefile  README.md  cdds.opam  configure  dune-project  ocaml-cdds.opam  ocaml-dds.install  ocaml-dds.opam
demo/: Makefile
demo/simple/: .merlin  Makefile  dune  jbuild  simple.ml
lib/: .merlin  jbuild  ocamldds.ml
src/: cdds.ml  dune  duration.ml  entities.ml  jbuild  policies.ml  types.ml
src/cdds/: .merlin  cdds.ml  jbuild  qos.ml
src/config/: discover.ml  dune  osconfig.ml
stubs/: CMakeLists.txt  Makefile  bit.c  bit.h  dds_stubs.c  dds_stubs.h  test_stub.c
