opam-version: "1.2"
name: "cdds"
version:"0.1"
maintainer: "angelo.corsaro@adlinktech.com"
homepage: "https://github.com/atolab/ocaml-cdds"
license: "LGPL 2.1"
authors:      "Angelo Corsaro"
bug-reports:  "https://github.com/atolab/ocaml-cdds/issues/"
dev-repo:     "https://github.com/atolab/ocaml-cdds.git"


build: [
 ["./configure"]
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "ctypes"
  "ctypes-foreign"
  "base"
  "stdio"
  "configurator"
  "lwt"
]

available: [ocaml-version >= "4.03.0"]
